send std{out,err} to syslog; set priority to 500

--- a/src/common/salt/states/500-docker-gcf-cron/supervisor.conf
+++ b/src/common/salt/states/500-docker-gcf-cron/supervisor.conf
@@ -1,8 +1,8 @@
 [program:cron]
 command=cron-logs
 autostart=true
-priority=100
-stdout_logfile=/dev/stdout
+priority=500
+stdout_logfile=syslog
 stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
+stderr_logfile=syslog
 stderr_logfile_maxbytes=0
