removed wrapper for logs; removed syslog as it now gcf built-in

--- a/tests/test_docker/cron/Dockerfile
+++ b/tests/test_docker/cron/Dockerfile
@@ -1,11 +1,11 @@
 FROM debian:stretch
 
 ADD https://raw.githubusercontent.com/docker-gcf/docker-gcf/develop/setup.sh /tmp/docker-gcf-setup.sh
-RUN sh /tmp/docker-gcf-setup.sh -m cron=develop -m rsyslog=develop
+RUN sh /tmp/docker-gcf-setup.sh -m cron=develop
 ENTRYPOINT ["gcf-entrypoint"]
 CMD ["supervisord", "-n"]
 
-RUN pkgs-install cron rsyslog
+RUN pkgs-install cron
 
 COPY ./bin /usr/local/bin/
 COPY ./config /etc/salt/base/
